--- a/project/cartoonetwork.html
+++ b/project/cartoonetwork.html
@@ -24,7 +24,7 @@
 
         header h1 {
             color: darkblue;
-            font-size: 4.5em; /* Larger font size for header */
+            font-size: 4.5em;
             margin: 0;
         }
 
@@ -40,7 +40,7 @@
         nav ul li a {
             text-decoration: none;
             color: darkblue;
-            font-size: 1.8em; /* Larger font size for navigation */
+            font-size: 1.8em;
             font-weight: bold;
             padding: 10px 20px;
             border: 3px solid darkblue;
@@ -55,19 +55,15 @@
         main {
             margin: 20px auto;
             padding: 20px;
-            max-width: 900px;
+            max-width: 600px;
             background-color: white;
             border: 3px solid #ff9900;
             border-radius: 12px;
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
         }
 
-        section {
-            margin-bottom: 30px;
-        }
-
         section img {
-            max-width: 100%;
+            max-width: 80%;
             height: auto;
             display: block;
             margin: 20px auto;
@@ -78,40 +74,39 @@
 
         section h2 {
             color: darkblue;
-            font-size: 3em; /* Larger font size for section headers */
+            font-size: 3em;
             margin-bottom: 15px;
         }
 
         section p {
             line-height: 2;
-            font-size: 1.8em; /* Larger font size for paragraphs */
+            font-size: 1.8em;
         }
 
         ul li {
-            font-size: 1.8em; /* Larger font size for list items */
+            font-size: 1.8em;
         }
 
         .images-section {
             display: flex;
-            justify-content: center;
-            gap: 20px;
-            flex-wrap: wrap;
+            flex-direction: column;
+            align-items: center;
+            gap: 30px;
         }
 
         .images-section div {
-            width: 30%;
             text-align: center;
         }
 
         .images-section img {
-            width: 100%;
+            max-width: 80%;
             border: 3px solid darkblue;
             border-radius: 12px;
         }
 
         .images-section p {
             margin-top: 10px;
-            font-size: 1.6em; /* Larger font size for captions */
+            font-size: 1.6em;
         }
     </style>
 </head>
@@ -142,7 +137,7 @@
                 <p>🌟 <strong>The Powerpuff Girls</strong></p>
             </div>
             <div>
-                <img src="../images/324px-Courage_Logo.png" alt="Dexter's Laboratory">
+                <img src="../images/324px-Courage_Logo.png alt="Dexter's Laboratory">
                 <p>🧪 <strong>Dexter's Laboratory</strong></p>
             </div>
             <div>
@@ -152,6 +147,8 @@
         </section>
     </main>
 </body>
+</html>
+
 </html>
 
 </html>
