--- a/project/disneychannel.html
+++ b/project/disneychannel.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Disney Channel - Nostalgic TV ✨</title>
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap" rel="stylesheet">
+    <!-- Importing the Fredoka One font -->
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Comic Neue', cursive;
+            font-family: 'Fredoka One', cursive;
             background-color: #f0f8ff;
             margin: 0;
             padding: 0;
@@ -23,7 +24,7 @@
 
         header h1 {
             color: darkblue;
-            font-size: 3.5em;
+            font-size: 4.5em;
             margin: 0;
         }
 
@@ -39,34 +40,69 @@
         nav ul li a {
             text-decoration: none;
             color: darkblue;
-            font-size: 1.5em;
+            font-size: 1.8em;
             font-weight: bold;
-            padding: 8px 15px;
+            padding: 10px 20px;
             border: 3px solid darkblue;
             border-radius: 8px;
+        }
+
+        nav ul li a:hover {
+            background-color: #ffcc00;
+            color: white;
         }
 
         main {
             margin: 20px auto;
             padding: 20px;
-            max-width: 900px;
+            max-width: 600px; /* Narrower content area for centered layout */
             background-color: white;
             border: 3px solid #ff9900;
             border-radius: 12px;
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
         }
 
+        section img {
+            max-width: 80%;
+            height: auto;
+            display: block;
+            margin: 20px auto;
+            border: 3px solid #ff9900;
+            border-radius: 12px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+        }
+
+        section h2 {
+            color: darkblue;
+            font-size: 3em;
+            margin-bottom: 15px;
+        }
+
+        section p {
+            line-height: 2;
+            font-size: 1.8em;
+        }
+
+        ul li {
+            font-size: 1.8em;
+        }
+
         .images-section {
             display: flex;
-            justify-content: center;
-            gap: 20px;
-            flex-wrap: wrap;
+            flex-direction: column; /* Center images in a vertical column */
+            align-items: center; /* Center align images horizontally */
+            gap: 30px;
         }
 
         .images-section img {
-            width: 100%;
+            max-width: 80%; /* Limit image size */
             border: 3px solid darkblue;
             border-radius: 12px;
+        }
+
+        .images-section p {
+            margin-top: 10px;
+            font-size: 1.6em;
         }
     </style>
 </head>
@@ -97,7 +133,7 @@
                 <p>🎤 <strong>Hannah Montana</strong></p>
             </div>
             <div>
-                <img src="../images/lizzie.jpg alt="Lizzie McGuire">
+                <img src="../images/324px-Courage_Logo.png" alt="Lizzie McGuire">
                 <p>🎒 <strong>Lizzie McGuire</strong></p>
             </div>
             <div>
