--- a/project/disneychannel.html
+++ b/project/disneychannel.html
@@ -24,7 +24,7 @@
 
         header h1 {
             color: darkblue;
-            font-size: 4.5em;
+            font-size: 4.5em; /* Larger header font size */
             margin: 0;
         }
 
@@ -40,7 +40,7 @@
         nav ul li a {
             text-decoration: none;
             color: darkblue;
-            font-size: 1.8em;
+            font-size: 1.8em; /* Larger navigation font size */
             font-weight: bold;
             padding: 10px 20px;
             border: 3px solid darkblue;
@@ -74,35 +74,35 @@
 
         section h2 {
             color: darkblue;
-            font-size: 3em;
+            font-size: 3em; /* Larger section header font size */
             margin-bottom: 15px;
         }
 
         section p {
             line-height: 2;
-            font-size: 1.8em;
+            font-size: 1.8em; /* Larger paragraph font size */
         }
 
         ul li {
-            font-size: 1.8em;
+            font-size: 1.8em; /* Larger list item font size */
         }
 
         .images-section {
             display: flex;
-            flex-direction: column; /* Center images in a vertical column */
-            align-items: center; /* Center align images horizontally */
+            flex-direction: column; 
+            align-items: center; 
             gap: 30px;
         }
 
         .images-section img {
-            max-width: 80%; /* Limit image size */
+            max-width: 80%; 
             border: 3px solid darkblue;
             border-radius: 12px;
         }
 
         .images-section p {
             margin-top: 10px;
-            font-size: 1.6em;
+            font-size: 1.6em; 
         }
     </style>
 </head>
@@ -144,3 +144,4 @@
     </main>
 </body>
 </html>
+
