--- a/project/cartoonetwork.html
+++ b/project/cartoonetwork.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cartoon Network - Nostalgic TV 🎉</title>
-    <!-- Importing the fun font -->
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
     <style>
         body {
@@ -66,31 +65,16 @@
             max-width: 80%;
             height: auto;
             display: block;
-            margin: 20px auto;
+            margin: 0 auto;
             border: 3px solid #ff9900;
             border-radius: 12px;
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
         }
 
-        section h2 {
-            color: darkblue;
-            font-size: 3em;
-            margin-bottom: 15px;
-        }
-
-        section p {
-            line-height: 2;
-            font-size: 1.8em;
-        }
-
-        ul li {
-            font-size: 1.8em;
-        }
-
         .images-section {
             display: flex;
-            flex-direction: column;
-            align-items: center;
+            flex-direction: column; 
+            align-items: center; 
             gap: 30px;
         }
 
@@ -99,14 +83,14 @@
         }
 
         .images-section img {
-            max-width: 80%;
+            max-width: 80%; 
             border: 3px solid darkblue;
             border-radius: 12px;
         }
 
         .images-section p {
             margin-top: 10px;
-            font-size: 1.6em;
+            font-size: 1.6em; 
         }
     </style>
 </head>
@@ -137,7 +121,7 @@
                 <p>🌟 <strong>The Powerpuff Girls</strong></p>
             </div>
             <div>
-                <img src="../images/324px-Courage_Logo.png alt="Dexter's Laboratory">
+                <img src="../images/324px-Courage_Logo.png" alt="Dexter's Laboratory">
                 <p>🧪 <strong>Dexter's Laboratory</strong></p>
             </div>
             <div>
@@ -147,8 +131,4 @@
         </section>
     </main>
 </body>
-</html>
-
-</html>
-
 </html>
