--- a/project/disneychannel.html
+++ b/project/disneychannel.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Disney Channel - Nostalgic TV ✨</title>
-    <!-- Importing the Fredoka One font -->
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
     <style>
         body {
@@ -24,7 +23,7 @@
 
         header h1 {
             color: darkblue;
-            font-size: 4.5em; /* Larger header font size */
+            font-size: 4.5em;
             margin: 0;
         }
 
@@ -40,7 +39,7 @@
         nav ul li a {
             text-decoration: none;
             color: darkblue;
-            font-size: 1.8em; /* Larger navigation font size */
+            font-size: 1.8em;
             font-weight: bold;
             padding: 10px 20px;
             border: 3px solid darkblue;
@@ -55,7 +54,7 @@
         main {
             margin: 20px auto;
             padding: 20px;
-            max-width: 600px; /* Narrower content area for centered layout */
+            max-width: 600px; 
             background-color: white;
             border: 3px solid #ff9900;
             border-radius: 12px;
@@ -66,25 +65,10 @@
             max-width: 80%;
             height: auto;
             display: block;
-            margin: 20px auto;
+            margin: 0 auto;
             border: 3px solid #ff9900;
             border-radius: 12px;
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-        }
-
-        section h2 {
-            color: darkblue;
-            font-size: 3em; /* Larger section header font size */
-            margin-bottom: 15px;
-        }
-
-        section p {
-            line-height: 2;
-            font-size: 1.8em; /* Larger paragraph font size */
-        }
-
-        ul li {
-            font-size: 1.8em; /* Larger list item font size */
         }
 
         .images-section {
@@ -94,10 +78,8 @@
             gap: 30px;
         }
 
-        .images-section img {
-            max-width: 80%; 
-            border: 3px solid darkblue;
-            border-radius: 12px;
+        .images-section div {
+            text-align: center;
         }
 
         .images-section p {
@@ -133,7 +115,7 @@
                 <p>🎤 <strong>Hannah Montana</strong></p>
             </div>
             <div>
-                <img src="../images/324px-Courage_Logo.png" alt="Lizzie McGuire">
+                <img src="../images/lizzie.jpg" alt="Lizzie McGuire">
                 <p>🎒 <strong>Lizzie McGuire</strong></p>
             </div>
             <div>
@@ -144,4 +126,3 @@
     </main>
 </body>
 </html>
-
