--- a/project/homepage.html
+++ b/project/homepage.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Nostalgic TV</title>
+    <title>Home - Nostalgic TV 🌟</title>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
     <style>
-        /* Import cartoonish font */
-        @import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
-
         body {
             background-color: lightblue;
-            font-family: Arial, sans-serif;
+            font-family: 'Fredoka One', cursive;
             margin: 0;
             padding: 0;
+            text-align: center;
         }
 
         header {
@@ -20,9 +19,9 @@
             padding: 20px;
         }
 
-        h1, h2 {
-            font-family: 'Bangers', Arial, sans-serif;
+        header h1 {
             color: darkblue;
+            font-size: 4.5em;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
         }
 
@@ -32,47 +31,22 @@
             margin: 0;
             display: flex;
             justify-content: center;
-            gap: 15px;
-        }
-
-        nav ul li {
-            display: inline;
+            gap: 20px;
         }
 
         nav ul li a {
             text-decoration: none;
             color: darkblue;
+            font-size: 1.8em;
             font-weight: bold;
-            font-size: 18px;
-        }
-
-        main {
-            margin: 20px auto;
-            padding: 20px;
-            max-width: 800px;
-            background-color: white;
-            border: 2px solid darkblue;
+            padding: 10px 20px;
+            border: 3px solid darkblue;
             border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
-        section {
-            margin-bottom: 20px;
-        }
-
-        section img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin: 10px auto;
-            border: 2px solid darkblue;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        section p {
-            line-height: 1.6;
-            text-align: center;
+        nav ul li a:hover {
+            background-color: navy;
+            color: white;
         }
 
         .search-bar {
@@ -83,18 +57,18 @@
         .search-bar input[type="text"] {
             width: 60%;
             padding: 10px;
-            font-size: 16px;
-            border: 2px solid darkblue;
-            border-radius: 4px;
+            font-size: 1.6em;
+            border: 3px solid darkblue;
+            border-radius: 8px;
         }
 
         .search-bar input[type="submit"] {
             padding: 10px 20px;
-            font-size: 16px;
+            font-size: 1.6em;
             background-color: darkblue;
             color: white;
             border: none;
-            border-radius: 4px;
+            border-radius: 8px;
             cursor: pointer;
         }
 
@@ -102,26 +76,54 @@
             background-color: navy;
         }
 
-        .visually-hidden {
-            position: absolute;
-            width: 1px;
-            height: 1px;
-            padding: 0;
-            margin: -1px;
-            overflow: hidden;
-            clip: rect(0, 0, 0, 0);
-            border: 0;
+        main {
+            margin: 20px auto;
+            padding: 20px;
+            max-width: 800px;
+            background-color: white;
+            border: 3px solid darkblue;
+            border-radius: 12px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+        }
+
+        section {
+            margin-bottom: 40px;
+        }
+
+        section h2 {
+            font-size: 3em;
+            color: darkblue;
+        }
+
+        section img {
+            max-width: 80%;
+            height: auto;
+            display: block;
+            margin: 20px auto;
+            border: 3px solid darkblue;
+            border-radius: 12px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+        }
+
+        section p {
+            font-size: 1.8em;
+            line-height: 1.8;
+        }
+
+        em {
+            font-style: italic;
+            font-size: 1.8em;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to Nostalgia World!</h1>
+        <h1>Welcome to Nostalgia World! 🌈</h1>
         <nav>
             <ul>
-                <li><a href="homepage.html">Home</a></li>
-                <li><a href="cartoonetwork.html">Cartoon Network</a></li>
-                <li><a href="disneychannel.html">Disney Channel</a></li>
+                <li><a href="homepage.html">🏠 Home</a></li>
+                <li><a href="cartoonetwork.html">🎞 Cartoon Network</a></li>
+                <li><a href="disneychannel.html">🌟 Disney Channel</a></li>
             </ul>
         </nav>
     </header>
@@ -134,19 +136,19 @@
     </div>
     <main>
         <section>
-            <h2>Relive Cartoon Network Classics</h2>
+            <h2>Relive Cartoon Network Classics 🎥</h2>
             <img src="../images/CN.jpg" alt="Cartoon Network logo and its iconic characters">
-            <p>Explore the world of Cartoon Network, home to unforgettable characters like Dexter, Blossom, and Jake the Dog.</p>
+            <p>Explore the world of Cartoon Network, home to unforgettable characters like <em>Dexter</em>, <em>Blossom</em>, and <em>Jake the Dog</em>. 🐾</p>
         </section>
         <section>
-            <h2>Disney Channel Memories</h2>
-            <img src="../images/alldisney.jpg" alt="Disney Channel logo showcasing classic shows">
-            <p>Revisit magical Disney Channel shows like <em>Hannah Montana</em> and <em>The Suite Life of Zack & Cody</em> that shaped your childhood.</p>
+            <h2>Disney Channel Memories ✨</h2>
+            <img src="../images/disneylogo.png" alt="Disney Channel logo showcasing classic shows">
+            <p>Revisit magical Disney Channel shows like <em>Hannah Montana</em> and <em>The Suite Life of Zack & Cody</em> that shaped your childhood. 🏰</p>
         </section>
         <section>
-            <h2>Nickelodeon Favorites</h2>
+            <h2>Nickelodeon Favorites 🧡</h2>
             <img src="../images/nickel.jpg" alt="Nickelodeon logo with popular cartoons">
-            <p>Laugh and reminisce with Nickelodeon’s most beloved shows, from <em>SpongeBob SquarePants</em> to <em>Rugrats</em>.</p>
+            <p>Laugh and reminisce with Nickelodeon’s most beloved shows, from <em>SpongeBob SquarePants</em> to <em>Rugrats</em>. 🐙</p>
         </section>
     </main>
 </body>
