--- a/project/disneychannel.html
+++ b/project/disneychannel.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Disney Channel - Nostalgic TV ✨</title>
+    <!-- Importing the Fredoka One font -->
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
     <style>
         body {
@@ -24,7 +25,6 @@
         header h1 {
             color: darkblue;
             font-size: 4.5em;
-            margin: 0;
         }
 
         nav ul {
@@ -47,44 +47,43 @@
         }
 
         nav ul li a:hover {
-            background-color: #ffcc00;
+            background-color: navy;
             color: white;
         }
 
         main {
             margin: 20px auto;
             padding: 20px;
-            max-width: 600px; 
+            max-width: 800px;
             background-color: white;
-            border: 3px solid #ff9900;
+            border: 3px solid darkblue;
             border-radius: 12px;
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+        }
+
+        section {
+            margin-bottom: 40px;
+        }
+
+        section h2 {
+            font-size: 3em;
+            color: darkblue;
         }
 
         section img {
             max-width: 80%;
             height: auto;
             display: block;
-            margin: 0 auto;
-            border: 3px solid #ff9900;
+            margin: 20px auto;
+            border: 3px solid darkblue;
             border-radius: 12px;
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
         }
 
-        .images-section {
-            display: flex;
-            flex-direction: column; 
-            align-items: center; 
-            gap: 30px;
-        }
-
-        .images-section div {
-            text-align: center;
-        }
-
-        .images-section p {
-            margin-top: 10px;
-            font-size: 1.6em; 
+        section p {
+            font-size: 1.8em;
+            line-height: 1.8;
+            margin-top: 20px;
         }
     </style>
 </head>
@@ -101,27 +100,14 @@
     </header>
     <main>
         <section>
-            <p>Since its launch in April 1983, Disney Channel has been a cornerstone of family entertainment. 🏰</p>
-            <h2>Popular Shows ✨:</h2>
-            <ul>
-                <li>🎤 <strong>Hannah Montana:</strong> Miley Stewart's double life as a pop star.</li>
-                <li>🎒 <strong>Lizzie McGuire:</strong> Lizzie and her friends navigate middle school.</li>
-                <li>🏨 <strong>The Suite Life of Zack & Cody:</strong> Follow the comedic adventures of twin brothers in a luxury hotel.</li>
-            </ul>
+            <h2>Disney Channel Memories ✨</h2>
+            <img src="../images/disneylogo.png" alt="Disney Channel logo showcasing classic shows">
+            <p>Revisit magical Disney Channel shows like <em>Hannah Montana</em> and <em>The Suite Life of Zack & Cody</em> that shaped your childhood. 🏰</p>
         </section>
-        <section class="images-section">
-            <div>
-                <img src="../images/hannaM.jpg" alt="Hannah Montana">
-                <p>🎤 <strong>Hannah Montana</strong></p>
-            </div>
-            <div>
-                <img src="../images/lizzie.jpg" alt="Lizzie McGuire">
-                <p>🎒 <strong>Lizzie McGuire</strong></p>
-            </div>
-            <div>
-                <img src="../images/zachncody.jpg" alt="The Suite Life of Zack & Cody">
-                <p>🏨 <strong>The Suite Life of Zack & Cody</strong></p>
-            </div>
+        <section>
+            <h2>Beloved Shows 🎤</h2>
+            <img src="../images/alldisney.jpg" alt="Disney Channel popular characters">
+            <p>Step into the world of Disney’s unforgettable stories and iconic characters that bring joy across generations. 🌟</p>
         </section>
     </main>
 </body>
